--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </header>
     <div id="fundo">
-        <h1 id="titulo">vida terrestre</h1>
+        <h1 id="titulo">Vida Terrestre</h1>
         <h2 id="subtitulo">Proteger, recuperar e promover o uso sustentável dos ecossistemas terrestres, gerir de forma
             sustentável as florestas, combater a desertificação, deter e reverter a degradação da terra e deter a perda
             de biodiversidade.</h2>
